--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,10 +1,9 @@
-@import './styles/welcome';
-
+@import './styles/navigation';
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
 }
 body::-webkit-scrollbar{
     width: 8px;
@@ -19,7 +18,8 @@ body::-webkit-scrollbar-track{
 
 body{
     color: #ffffff;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins';
+    font-weight: bold;
     font-size: 1.2rem;
 }
 
